<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="app_name" translatable="false">Litera</string>

    <string name="rus">Russian</string>
    <string name="ukr">Ukrainian</string>

    <string name="ad_unit_id" translatable="false">ca-app-pub-6718743335584538/7554779800</string>
    <string name="ad_unit_id_translit" translatable="false">ca-app-pub-6718743335584538/7617706156</string>

    <string name="mode_ukr_kmu10">Passport</string>
    <string name="mode_ukr_usbgn">BGN/PCGN 1965 System</string>
    <string name="mode_ukr_gost779">GOST 7.79&#8211;2000 B</string>

    <string name="mode_rus_gostr52535">GOST R 52535.1&#8211;2006</string>
    <string name="slash" translatable="false">/</string>
    <string name="hint_enter_text">Tap to enter text</string>
    <string name="loading">Loading</string>
    <string name="menu_oss_licenses">Licenses</string>
    <string name="menu_privacy_policy">Privacy policy</string>

    <string name="no_voice_recognition">Voice recognition unavailable</string>
    <string name="litera_text_copy_label">Translit</string>
    <string name="text_copied">Text copied</string>
    <string name="desc_voice_recognition">Voice recognition</string>
    <string name="desc_camera_recognition">Image recognition</string>

    <plurals name="symbols_amount">
        <item quantity="one">%1$d symbol\u00A0</item>
        <item quantity="other">%1$d symbols\u00A0</item>
    </plurals>

</resources>
