<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="ua.sergeimunovarov.litera.main.MainActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/ad_unit_id"
            tools:visibility="visible" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/adView"
            android:layout_alignParentTop="true"
            android:fitsSystemWindows="true"
            tools:context=".main.MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:orientation="vertical"
                app:layout_anchorGravity="top">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    app:title="Litera"
                    app:titleTextAppearance="@style/Toolbar.TitleText" />

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@color/background"
                app:layout_anchor="@id/appBar"
                app:layout_anchorGravity="bottom"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:id="@+id/inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/white"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipChildren="false"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/langSetting"
                            style="@style/SettingsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> model.openLangSettings()}"
                            android:text="@{model.langPref}"
                            tools:text="UK" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/slash"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/standardSetting"
                            style="@style/SettingsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> model.openSettings()}"
                            android:text="@{model.standardPref}"
                            tools:text="BGN/PCGN 1965" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/primary" />

                    <EditText
                        android:id="@+id/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/white"
                        android:focusable="false"
                        android:gravity="start|top"
                        android:hint="@string/hint_enter_text"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:minLines="3"
                        android:onClick="@{() -> model.openInput()}"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/primary" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnCameraRecognition"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginEnd="16dp"
                            android:background="@null"
                            android:contentDescription="@string/desc_camera_recognition"
                            android:onClick="@{() -> model.startCameraRecognition()}"
                            android:padding="2dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_camera"
                            android:tint="@color/primaryDark"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/btnVoiceRecognition"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="16dp"
                            android:background="@null"
                            android:contentDescription="@string/desc_voice_recognition"
                            android:onClick="@{() -> model.startVoiceRecognition()}"
                            android:padding="2dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_voice"
                            android:tint="@color/primaryDark" />

                    </LinearLayout>

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputLayout"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom">

                    <include
                        android:id="@+id/progress"
                        layout="@layout/layout_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="@{model.itemsLoaded ? View.GONE : View.VISIBLE}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/historyItems"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="@{model.itemsLoaded ? View.VISIBLE : View.GONE}"
                        app:dividerDecoration="@{@drawable/shape_divider}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/view_history_item" />

                </FrameLayout>

            </RelativeLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </RelativeLayout>
</layout>
